1-Setup/grafana.yaml
# ------------------- Prometheus Namespace ------------------- #
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring

---
# ------------------- Grafana Deployment ------------------- #

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana-core
  namespace: monitoring
  labels:
    app: grafana
    component: core
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
        component: core
    spec:
      containers:
      - image: fg2it/grafana-armhf:v5.0.0-beta4
        name: grafana-core
        imagePullPolicy: IfNotPresent
        # env:
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: webui
          containerPort: 3000
        readinessProbe:
          httpGet:
            path: /login
            port: webui
          initialDelaySeconds: 30
          timeoutSeconds: 3
        volumeMounts:
        - name: grafana-persistent-storage
          mountPath: /var/lib/grafana
      volumes:
      - name: grafana-persistent-storage
        persistentVolumeClaim:
          claimName: grafana-claim

---
# ------------------- Grafana Service ------------------- #

apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
    component: core
spec:
  ports:
    - port: 3000
  selector:
    app: grafana
    component: core

---
# ------------------- Grafana Service ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.goldenpassport.net
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
