1-Setup/jenkins.yaml
# ------------------- Jenkins Namespace ------------------- #

apiVersion: v1
kind: Namespace
metadata:
  name: jenkins

---
# ------------------- Jenkins Deployment ------------------- #

apiVersion: apps/v1beta1 # for versions before 1.7.0 use apps/v1beta1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: jenkins
  labels:
    app: jenkins
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: avelytchko/jenkins
        ports:
          - name: http
            containerPort: 8080

---
# ------------------- Jenkins Service ------------------- #

apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  ports:
  - name: http
    port: 80
    targetPort: 8080

---
# ------------------- Jenkins Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  labels:
    traffic-type: external
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: jenkins.goldenpassport.net
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-service
          servicePort: http
